--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <img src="file:///C:/Users/Merton%20Libraries/Downloads/2024-04-06-Meditation-Yoga-Sanctuary.gif alt="Image of Title">
         <div class="container">
             <nav>
                 <ul>
