--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div id="gif-container">
-        <img src="https://text.media.giphy.com/v1/media/giphy.gif?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJrZXkiOiJwcm9kLTIwMjAtMDQtMjIiLCJzdHlsZSI6InBhcnR5dGltZSIsInRleHQiOiJNZWRpdGF0aW9uJTIwJTI2JTIwWW9nYSUyMFNhbmN0dWFyeSIsImlhdCI6MTcxMjQxMzEyNX0.iAebPaN7R3u48htv6OsR32NsDjzkhRjwnRGVu6Voicw&cid=a559de6bdd33b72c806b7fa79eaed44d37ac913ef5bd3501&dynamic_style=partytime&ep=v1_text_animate&rid=giphy.gif&ct=t alt="Image of Title">
+        <img src="https://text.media.giphy.com/v1/media/giphy.gif?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJrZXkiOiJwcm9kLTIwMjAtMDQtMjIiLCJzdHlsZSI6InBhcnR5dGltZSIsInRleHQiOiJNZWRpdGF0aW9uJTIwJTI2JTIwWW9nYSUyMFNhbmN0dWFyeSIsImlhdCI6MTcxMjQxMzEyNX0.iAebPaN7R3u48htv6OsR32NsDjzkhRjwnRGVu6Voicw&cid=a559de6bdd33b72c806b7fa79eaed44d37ac913ef5bd3501&dynamic_style=partytime&ep=v1_text_animate&rid=giphy.gif&ct=t alt="Image of Title" width="300">>
         <div class="container">
             <nav>
                 <ul>
